fix overflow in desktop check

--- a/app/styles/partials/_check.sass
+++ b/app/styles/partials/_check.sass
@@ -114,8 +114,6 @@ p.kormapp-cartitem-name
 
 .kormapp-scrollable-check
   overflow: auto
-  .kormapp-sidebar-check &
-    overflow: visible
 
 
 .kormapp-cart-items
